--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Logo Section -->
         <div class="flex justify-center mb-6">
             <!-- To use your own logo, replace the URL below with the direct link to your image file hosted online -->
-            <img src="https://raw.githubusercontent.com/VladiG1112/Request-for-Studio-Time/blob/main/Electric%20Heart%20Sticker%20Logo.png" alt="Studio Logo" class="rounded-xl">
+            <img src="https://raw.githubusercontent.com/VladiG1112/Request-for-Studio-Time/main/Electric%20Heart%20Sticker%20Logo.png" alt="Studio Logo" class="rounded-xl">
         </div>
         
         <!-- Studio Name -->
@@ -141,7 +141,7 @@
             dateInput.value = todayISO;
             
             // Check if the SCRIPT_URL placeholder has been replaced
-            if (SCRIPT_URL === 'https://script.google.com/macros/s/AKfycbzWjpgpn7FhdmljFnhR3eFU_8_ugFg-XFyrBnD0Qna-0Donrbjj0oxxQxhH1YcQkFgwyA/exec') {
+            if (SCRIPT_URL === 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE') {
                 statusDiv.innerHTML = "Error: Please update the 'SCRIPT_URL' variable in the code with your Google Apps Script URL.";
                 statusDiv.classList.remove('text-green-400', 'text-gray-400');
                 statusDiv.classList.add('text-red-400');
