--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Logo Section -->
         <div class="flex justify-center mb-6">
             <!-- To use your own logo, replace the URL below with the direct link to your image file hosted online -->
-            <img src="https://raw.githubusercontent.com/VladiG1112/Request-for-Studio-Time/main/Electric%20Heart%20Sticker%20Logo.png" alt="Studio Logo" class="rounded-xl">
+            <img src="https://raw.githubusercontent.com/VladiG1112/Request-for-Studio-Time/main/Electric-Heart-Sticker-Logo.png" alt="Studio Logo" class="rounded-xl">
         </div>
         
         <!-- Studio Name -->
