--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="bg-gray-900 rounded-3xl shadow-2xl p-6 sm:p-10 w-full max-w-2xl">
         <!-- Logo Section -->
         <div class="flex justify-center mb-6">
-            <!-- To use your own logo, replace the URL below with the direct link to your image file hosted online -->
-            <img src="https://raw.githubusercontent.com/VladiG1112/Request-for-Studio-Time/main/Electric-Heart-Sticker-Logo.png" alt="Studio Logo" class="rounded-xl">
+            <!-- The filename has been updated for better compatibility with web servers -->
+            <img src="https://raw.githubusercontent.com/VladiG1112/Request-for-Studio-Time/main/electric-heart-logo.png" alt="Studio Logo" class="rounded-xl w-24 h-24">
         </div>
         
         <!-- Studio Name -->
@@ -124,7 +124,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzWjpgpn7FhdmljFnhR3eFU_8_ugFg-XFyrBnD0Qna-0Donrbjj0oxxQxhH1YcQkFgwyA/exec'; // IMPORTANT: REPLACE THIS
+            const SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE'; // IMPORTANT: REPLACE THIS
 
             const form = document.getElementById('studioRequestForm');
             const statusDiv = document.getElementById('status');
