--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE'; // IMPORTANT: REPLACE THIS
+            const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzWjpgpn7FhdmljFnhR3eFU_8_ugFg-XFyrBnD0Qna-0Donrbjj0oxxQxhH1YcQkFgwyA/exec'; // IMPORTANT: REPLACE THIS
 
             const form = document.getElementById('studioRequestForm');
             const statusDiv = document.getElementById('status');
