--- a/index.html
+++ b/index.html
@@ -350,32 +350,27 @@
             submissionStatusEl.classList.add('text-gray-400');
 
             const formData = new FormData(form);
-            const data = Object.fromEntries(formData.entries());
-            data.time = selectedTimes.sort((a, b) => convertTo24Hour(a) - convertTo24Hour(b)).join(', ');
-
+            // Ensure the hidden inputs for date and time are added to the form data
+            formData.set('date', dateInput.value);
+            formData.set('time', selectedTimes.sort((a, b) => convertTo24Hour(a) - convertTo24Hour(b)).join(', '));
+            
             try {
                 const response = await fetch(event.target.action, {
                     method: 'POST',
-                    body: JSON.stringify(data),
-                    headers: {
-                        'Content-Type': 'application/json'
-                    }
+                    body: formData, // Send the FormData object directly
+                    mode: 'no-cors' 
                 });
 
-                if (response.ok) {
-                    submissionStatusEl.textContent = 'Booking submitted successfully! We will contact you shortly.';
-                    submissionStatusEl.classList.remove('text-gray-400', 'text-red-400');
-                    submissionStatusEl.classList.add('text-green-400');
-                    form.reset();
-                    selectedTimes = [];
-                } else {
-                    submissionStatusEl.textContent = "Oops! There was a problem with your submission.";
-                    submissionStatusEl.classList.remove('text-gray-400', 'text-green-400');
-                    submissionStatusEl.classList.add('text-red-400');
-                }
+                // The response check is different with no-cors mode, so we assume success if no error is thrown
+                submissionStatusEl.textContent = 'Booking submitted successfully! We will contact you shortly.';
+                submissionStatusEl.classList.remove('text-gray-400', 'text-red-400');
+                submissionStatusEl.classList.add('text-green-400');
+                form.reset();
+                selectedTimes = [];
+
             } catch (error) {
                 submissionStatusEl.textContent = "Oops! An error occurred. Please try again later.";
-                submissionStatusEl.classList.remove('text-gray-400', 'text-green-400');
+                submissionStatusEl.classList.remove('text-green-400', 'text-green-400');
                 submissionStatusEl.classList.add('text-red-400');
                 console.error('Error:', error);
             }
