--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Logo and Heading -->
         <img src="https://raw.githubusercontent.com/VladiG1112/Request-for-Studio-Time/main/electric-heart-logo.png" alt="Electric Heart Studio Logo" class="w-24 h-24 mb-4 rounded-xl">
         <h1 class="text-4xl sm:text-5xl font-extrabold text-purple-400 mb-2 text-center">Electric Heart Studio</h1>
-        <h2 class="text-2xl sm:text-3xl font-bold text-white text-center">Studio Time Request</h2>
+        <h2 class="text-2xl sm:text-3xl font-bold text-white text-center">Book Studio Time</h2>
     </div>
 
     <div class="bg-gray-900 rounded-3xl shadow-2xl p-6 sm:p-10 w-full max-w-4xl">
