--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electric Heart Studio</title>
+    <title>Electric Heart Studios</title>
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -75,7 +75,7 @@
     <div class="mb-6 flex flex-col items-center">
         <!-- Logo and Heading -->
         <img src="https://raw.githubusercontent.com/VladiG1112/Request-for-Studio-Time/main/electric-heart-logo.png" alt="Electric Heart Studio Logo" class="w-24 h-24 mb-4 rounded-xl">
-        <h1 class="text-4xl sm:text-5xl font-extrabold text-purple-400 mb-2 text-center">Electric Heart Studio</h1>
+        <h1 class="text-4xl sm:text-5xl font-extrabold text-purple-400 mb-2 text-center">Electric Heart Studios</h1>
         <h2 class="text-2xl sm:text-3xl font-bold text-white text-center">Book Studio Time</h2>
     </div>
 
