--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <script>
         // Paste your new Google Apps Script URL here.
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbz4aTuDIgFu7BbjYoaSMTe_6sXGwrKxnAafSo2en9RNvFP0zgliOZz1UDEEcAuIkmgCug/exec';
+        const SCRIPT_URL = 'hhttps://script.google.com/macros/s/AKfycbwe6kSLFm5U9KuckKxMhCFIN-v9jzRY-hXvn5dI0pRYiW9_-5Uc9rQ1MMDnVJw2ETq6LQ/exec';
         
         // DOM element references
         const calendarEl = document.getElementById('calendar');
